--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "An app to visulalize path finding",
   "scripts": {
-    "dev": "webpack serve --open --config config/webpack.config.js"
+    "dev": "webpack serve --open --config config/webpack.config.js",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/buneeIsSlo/Vizit#readme",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "eslint": "^8.29.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "sass": "^1.55.0",
